# Data-Analysis

./: Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: bmi.duckdb  sample_agmarknet_onion_nashik.csv
notebooks/: 01_exploration.ipynb
src/bmi.egg-info/: PKG-INFO  SOURCES.txt
src/bmi/etl/: ingest.py
src/bmi/features/: build_features.py
src/bmi/models/: forecast.py  train.py
src/bmi/orchestration/: flow.py
src/bmi/utils/: config.py
tests/: test_features.py
